infra/platform/monitoring/loki/http-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki-gateway
spec:
  parentRefs:
  - name: shared-gateway
    namespace: gateway
  hostnames:
  - "loki.lab.sturla.tech"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: loki-gateway
          port: 80
